--- a/act_Application/Views/TablaAportaciones/Index.cshtml
+++ b/act_Application/Views/TablaAportaciones/Index.cshtml
@@ -10,7 +10,7 @@
 <header>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/General/tablaAportaciones.css">
+    <link rel="stylesheet" href="/css/General/Tablas/TablaAportaciones.css" />
     <script src="~/js/mensajeAportantes.js"> </script>
 </header>
 <body>
