--- a/act_Application/Views/TablaMultas/Index.cshtml
+++ b/act_Application/Views/TablaMultas/Index.cshtml
@@ -11,7 +11,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="~/js/mensajeMultados.js"> </script>
-    <link rel="stylesheet" href="/css/General/tablaMultas.css">
+    <link rel="stylesheet" href="/css/General/Tablas/TablaMultas.css" />
 </header>
 <body>
     <div class="content-text">
