--- a/act_Application/Views/Transacciones/Create.cshtml
+++ b/act_Application/Views/Transacciones/Create.cshtml
@@ -11,7 +11,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="~/css/General/Transacciones.css">
+    <link rel="stylesheet" href="~/css/General/Transacciones/Transacciones.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="~/js/Transaccion.js"> </script>
 </head>
