Participantes Parte 6 (Ordenamiento de Archivos .JS)

--- a/act_Application/Views/Aportar/Create.cshtml
+++ b/act_Application/Views/Aportar/Create.cshtml
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/General/Aportar/Aportar.css" />
-    <script src="~/js/aportar.js"></script>
+    <script src="~/js/Aportar/Aportar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
