--- a/act_Application/Views/Shared/_Layout.cshtml
+++ b/act_Application/Views/Shared/_Layout.cshtml
@@ -173,7 +173,7 @@
     </section>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/navBar.js"></script>
+    <script src="/js/_Layout/navBar.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
