--- a/act_Application/Views/Notificaciones/Index.cshtml
+++ b/act_Application/Views/Notificaciones/Index.cshtml
@@ -20,7 +20,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/General/Notificaciones/Notificaciones_1.css" />
     <link rel="stylesheet" href="/css/General/Notificaciones/Notificaciones_2.css" />
-    <script src="/js/Notificaciones.js"></script>
+    <script src="/js/Notificaciones/Notificaciones_1.js"></script>
+    <script src="/js/Notificaciones/Notificaciones_2.js"></script>
 </header>
 <body>
     <div class="content-text">
@@ -208,14 +209,14 @@
                                         </div>
                                     </div>
 
-                                    <div class="aceptar" id="modal-resp-@notificacionUser.Notificaciones.Id">
-                                        <div class="modal_aceptar__container">
+                                    <div class="modal-aceptar" id="modal-aceptar-@notificacionUser.Notificaciones.Id">
+                                        <div class="modal-aceptar__container">
                                             <h2 class="modal__title">Esta seguro en Aceptar las condiciones dadas por los Administradores?</h2>
-                                            <div class="modal_aceptar__content">
+                                            <div class="modal-aceptar__content">
                                                 <form asp-action="AceptarReferente">
                                                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                                                    <input type="hidden" asp-for="@notificacionUser.Transacciones.Id" name="Id" id="Id" />
-                                                    <div class="container_modal_aceptar_btn">
+                                                     <input type="hidden" asp-for="@notificacionUser.Transacciones.Id" name="Id" id="Id" />
+                                                    <div class="container-modal-btn">
                                                         <button type="submit" data-notification-id="@notificacionUser.Notificaciones.Id" class="save-button">Aceptar</button>
                                                         <a href="~/Notificaciones/Index" class="modal-secundaria__close" data-notification-id="@notificacionUser.Notificaciones.Id">Cerrar</a>
                                                     </div>
@@ -224,14 +225,14 @@
                                         </div>
                                     </div>
 
-                                    <div class="rechazar" id="modal-dene-@notificacionUser.Notificaciones.Id">
-                                        <div class="modal_rechazar__container">
+                                    <div class="modal-rechazar" id="modal-rechazar-@notificacionUser.Notificaciones.Id">
+                                        <div class="modal-rechazar__container">
                                             <h2 class="modal__title">Esta Seguro en Rechazar las condiciones dadas por los Administradores?</h2>
-                                            <div class="modal_rechazar__content">
+                                            <div class="modal-rechazar__content">
                                                 <form asp-action="RechazarReferente">
                                                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                                     <input type="hidden" asp-for="@notificacionUser.Transacciones.Id" name="Id" id="Id" />
-                                                    <div class="container_modal_rechazar_btn">
+                                                    <div class="container-modal-btn">
                                                         <button type="submit" class="save-button" data-notification-id="@notificacionUser.Notificaciones.Id">Rechazar</button>
                                                         <a href="~/Notificaciones/Index" class="modal-secundaria__close" data-notification-id="@notificacionUser.Notificaciones.Id">Cerrar</a>
                                                     </div>
