--- a/act_Application/Views/TablaAportaciones/Index.cshtml
+++ b/act_Application/Views/TablaAportaciones/Index.cshtml
@@ -11,7 +11,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/General/Tablas/TablaAportaciones.css" />
-    <script src="~/js/mensajeAportantes.js"> </script>
+    <script src="~/js/Aportar/MsjAportar.js"> </script>
 </header>
 <body>
     <div class="content-text">
