--- a/act_Application/Views/TablaMultas/Index.cshtml
+++ b/act_Application/Views/TablaMultas/Index.cshtml
@@ -10,7 +10,7 @@
 <header>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="~/js/mensajeMultados.js"> </script>
+    <script src="~/js/Multa/MsjMulta.js"> </script>
     <link rel="stylesheet" href="/css/General/Tablas/TablaMultas.css" />
 </header>
 <body>
