--- a/act_Application/Views/Home/Menu.cshtml
+++ b/act_Application/Views/Home/Menu.cshtml
@@ -1,6 +1,41 @@
 ﻿@{
     ViewData["Title"] = "Menu";
 }
+@{
+    ViewBag.Title = "Home";
+}
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/General/Home/Menu.css" />
+</head>
+<div class="contenedor-principal">
+    <div class="cont-h1">
+        <div class="ch1-conte1">
+            <!-- Contenido para ch1-conte1 -->
+        </div>
+        <div class="ch1-conte2">
+            <!-- Contenido para ch1-conte2 -->
+        </div>
+    </div>
+    <!--<div class="cont-h2">
+        <div class="ch2-conte1">
+
+        </div>
+        <div class="ch2-conte2">
+
+        </div>
+    </div>
+    <div class="cont-h3">
+        <div class="ch3-conte1">
+
+        </div>
+        <div class="ch3-conte2">
+
+        </div>
+    </div>-->
+</div>
+<!-- 
 <div class="text-center">
     <div class="alert alert-success">
         <h1>Menu</h1>
@@ -23,4 +58,5 @@
         }
     </div>
 </div>
+-->
 
