--- a/act_Application/Views/Shared/_Layout.cshtml
+++ b/act_Application/Views/Shared/_Layout.cshtml
@@ -143,7 +143,7 @@
             <div class="bottom-content">
                 <ul>
                     <li class="Logout-cerrarsesion">
-                        <a href="@Url.Action("CerrarSesion", "Home")">
+                        <a id="btn-CerrarSesion" href="@Url.Action("CerrarSesion", "Home")">
                             <i class='bx bx-log-out icon'></i>
                             <span class="text nav-text">Logout</span>
                         </a>
@@ -174,6 +174,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/_Layout/navBar.js"></script>
+    <script src="/js/_Layout/DeslogeoAutomatico.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
