Vista Menu Principal Parte 1 (Eskueleto)

--- a/act_Application/Views/Home/Menu.cshtml
+++ b/act_Application/Views/Home/Menu.cshtml
@@ -1,7 +1,4 @@
 ﻿@{
-    ViewData["Title"] = "Menu";
-}
-@{
     ViewBag.Title = "Home";
 }
 <head>
@@ -9,32 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/General/Home/Menu.css" />
 </head>
-<div class="contenedor-principal">
-    <div class="cont-h1">
-        <div class="ch1-conte1">
-            <!-- Contenido para ch1-conte1 -->
-        </div>
-        <div class="ch1-conte2">
-            <!-- Contenido para ch1-conte2 -->
-        </div>
+<body>
+    <div class="grid-container">
+        <div class="item1"><label class="item1-title">Perfil</label></div>
+        <div class="item2"><label class="item1-title">Notificaciones</label></div>
+        <div class="item3"><label class="item1-title">Aportaciones, Multas</label></div>
+        <div class="item4">Main</div>
+        <div class="item5">Footer</div>
     </div>
-    <!--<div class="cont-h2">
-        <div class="ch2-conte1">
+</body>
 
-        </div>
-        <div class="ch2-conte2">
-
-        </div>
-    </div>
-    <div class="cont-h3">
-        <div class="ch3-conte1">
-
-        </div>
-        <div class="ch3-conte2">
-
-        </div>
-    </div>-->
-</div>
 <!-- 
 <div class="text-center">
     <div class="alert alert-success">
