--- a/act_Application/wwwroot/css/General/Home/Esqueleto/Menu_Grid_Components.css
+++ b/act_Application/wwwroot/css/General/Home/Esqueleto/Menu_Grid_Components.css
@@ -8,7 +8,7 @@
 .grid-container {
     display: grid;
     grid-template-columns: 25% 50% 25% 50%;
-    grid-template-rows: 80px 80px 300px 100px 80px 150px;
+    grid-template-rows: 80px 80px 275px 100px 80px 80px;
     box-sizing: border-box;
     background-color: #EAF2E3;
 }
@@ -22,35 +22,43 @@
 
 .item1 {
     background-color: #F2A05D;
-    grid-column: 1/2;
-    grid-row: 1/3;
+    grid-column: 1/3; /*Ancho*/
+    grid-row: 1/3; /*Largo*/
     border-radius: 8px 9px;
 }
+
 .item2 {
     background-color: #F25757;
-    grid-column: 2/4;
-    grid-row: 1/2;
+    grid-column: 4/3;
+    grid-row: 2/2;
     border-radius: 8px 9px;
 }
 
 .item3 {
-    background-color: #F2E863;
-    grid-column: 1/2;
-    grid-row: 3/6;
+    background-color: #F25757;
+    grid-column: 3/4;
+    grid-row: 1/2;
     border-radius: 8px 9px;
 }
 
 .item4 {
-    background-color: #61E8E1;
-    grid-column: 2/4;
-    grid-row: 2/6;
+    background-color: #F25757;
+    grid-column: 1/2;
+    grid-row: 3/8;
     border-radius: 8px 9px;
 }
 
 .item5 {
-    background-color: #F2A05D;
-    grid-column: 1/4;
-    grid-row: 6/7;
+    background-color: #F25757;
+    grid-column: 2/4;
+    grid-row: 3/6;
+    border-radius: 8px 9px;
+}
+
+.item6 {
+    background-color: #F25757;
+    grid-column: 2/4;
+    grid-row: 6/9;
     border-radius: 8px 9px;
 }
 
