--- a/act_Application/wwwroot/css/General/Home/Esqueleto/Menu_Grid_Components.css
+++ b/act_Application/wwwroot/css/General/Home/Esqueleto/Menu_Grid_Components.css
@@ -16,8 +16,8 @@
     .grid-container > div {
         margin: 4px;
         display: flex;
-        justify-content: center;
-        align-items: center;
+        /*justify-content: center;*/
+        /*align-items: center;*/
     }
 
 .item1 {
