Modificaciones base en Vista Aportar

--- a/act_Application/Views/Home/Menu.cshtml
+++ b/act_Application/Views/Home/Menu.cshtml
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/General/Home/Esqueleto/Menu_Grid_Components.css" />
     <link rel="stylesheet" href="/css/General/Home/Profile/Profile.css" />
+    <link rel="stylesheet" href="/css/General/Home/Main/Main.css" />
 </head>
 <body>
     <div class="grid-container">
@@ -31,7 +32,15 @@
             <label class="item4-title">item4</label>
         </div>
         <div class="item5">
-            <label class="item4-title">item5</label>
+            <table class="main">
+                <tr>
+                    <td class="col-aport">Contenido Aportaciones</td>
+                    <td class="col-mult">Contenido Multas</td>
+                </tr>
+                <tr>
+                    <td class="col-part" colspan="2">Contenido Parte</td>
+                </tr>
+            </table>
         </div>
         <div class="item6">
             <label class="item5-title">item6</label>
