--- a/act_Application/Views/Shared/_Layout.cshtml
+++ b/act_Application/Views/Shared/_Layout.cshtml
@@ -99,7 +99,7 @@
                         @if (User.HasClaim("Rol", "Administrador") || User.HasClaim("Rol", "Socio"))
                         {
                             <li class="nav-link">
-                                <a href="~/Aportar/Create">
+                                <a href="~/Aportar/Aportacion">
                                     <i class='bx bx-money icon'></i>
                                     <span class="text nav-text">Aportar</span>
                                 </a>
