--- a/act_Application/wwwroot/css/General/Home/Profile/cardProfile.css
+++ b/act_Application/wwwroot/css/General/Home/Profile/cardProfile.css
@@ -4,14 +4,12 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #F2A05D;
     border-radius: 8px 9px;
 }
 
 .cont-img {
     width: 100px;
     height: 100px;
-    background-color: royalblue;
     border-radius: 50%;
     margin-right: 10px;
     overflow: hidden;
@@ -32,3 +30,27 @@
         font-weight: bold;
         margin-bottom: 5px;
     }
+
+@media screen and (max-width: 850px) {
+    .perfil-card {
+        padding: 2% 5%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        border-radius: 8px 9px;
+    }
+
+    .cont-img {
+        width: 50%;
+        height: 50%;
+        border-radius: 50%;
+        margin-right: 10px;
+        overflow: hidden;
+    }
+
+        .cont-img img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+}
