--- a/act_Application/Views/Home/Menu.cshtml
+++ b/act_Application/Views/Home/Menu.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/General/Home/Esqueleto/Cuerpo.css" />
     <link rel="stylesheet" href="/css/General/Home/Profile/cardProfile.css" />
     <link rel="stylesheet" href="/css/General/Home/Main/Main.css" />
+    <link rel="stylesheet" href="/css/General/Home/Footer/Footer.css" />
 </head>
 <body>
     <div class="grid-container">
@@ -42,7 +43,14 @@
             </table>
         </div>
         <div class="item6">
-            <label class="item5-title">item6</label>
+            <div class="fila-supr">
+                <div class="fs-titulo">
+                    <label class="fs-t1">Eventos de Participacion</label>
+                </div>
+            </div>
+            <div class="fila-infr">
+                <button class="btn-participante">Participar</button>
+            </div>
         </div>
 
     </div>
