--- a/act_Application/Views/Administrador/CreateParticipantes.cshtml
+++ b/act_Application/Views/Administrador/CreateParticipantes.cshtml
@@ -28,9 +28,9 @@
                 <span asp-validation-for="FechaGeneracion" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Participantes" class="control-label"></label>
-                <input asp-for="Participantes" class="form-control" />
-                <span asp-validation-for="Participantes" class="text-danger"></span>
+                <label asp-for="ParticipantesId" class="control-label"></label>
+                <input asp-for="ParticipantesId" class="form-control" />
+                <span asp-validation-for="ParticipantesId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
