--- a/act_Application/Views/Administrador/DeleteParticipantes.cshtml
+++ b/act_Application/Views/Administrador/DeleteParticipantes.cshtml
@@ -30,10 +30,10 @@
             @Html.DisplayFor(model => model.FechaGeneracion)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Participantes)
+            @Html.DisplayNameFor(model => model.ParticipantesId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Participantes)
+            @Html.DisplayFor(model => model.ParticipantesId)
         </dd>
     </dl>
     
