--- a/act_Application/Views/Notificaciones/Index.cshtml
+++ b/act_Application/Views/Notificaciones/Index.cshtml
@@ -6,12 +6,13 @@
     var NotifiRepository = new NotificacionesRepository();
     var userIdClaim = User.Claims.FirstOrDefault(c => c.Type == "Id");
     int TotalNotiAdmin = NotifiRepository.GetTotalNotificacionesAdministrador(), userId = -1, TotalNotiUser = -1;
-    
+
     if (userIdClaim != null && int.TryParse(userIdClaim.Value, out userId))
     {
         TotalNotiUser = NotifiRepository.GetTotalNotificacionesUsuario(userId);
     }
-    
+    DateTime fechaActual = DateTime.Now;
+    string fechaactual = fechaActual.ToString("yyyy-MM-dd");
     DateTime minDateP = DateTime.Now.AddDays(46);
     string minDateStrP = minDateP.ToString("dd-MMMM-yyyy");
 }
@@ -89,17 +90,17 @@
                                             <input type="hidden" asp-for="@notificacionAdmin.Transacciones.Id" name="id" id="id" />
                                             <div class="form-group">
                                                 <label asp-for="@notificacionAdmin.Transacciones.FechaPagoTotalPrestamo" class="control-label">Fecha de Pago del Prestamo</label>
-                                                <input asp-for="@notificacionAdmin.Transacciones.FechaPagoTotalPrestamo" required type="date" class="input-date" name="FechaPagoTotalPrestamo" id="FechaPagoTotalPrestamo" min="@notificacionAdmin.Transacciones.FechaIniCoutaPrestamo.ToString("dd-MMMM-yyyy HH:mm:ss")" />
+                                                <input asp-for="@notificacionAdmin.Transacciones.FechaPagoTotalPrestamo" required type="date" class="input-date" name="FechaPagoTotalPrestamo" id="FechaPagoTotalPrestamo" min="@fechaactual" />
                                                 <span asp-validation-for="@notificacionAdmin.Transacciones.FechaPagoTotalPrestamo" class="text-danger"></span>
                                             </div>
                                             <div class="form-group">
                                                 <label asp-for="@notificacionAdmin.Participante.FechaInicio" class="control-label">Fecha Inicio de Inscripcion de Garantes</label>
-                                                <input asp-for="@notificacionAdmin.Participante.FechaInicio" required type="date" class="input-date" name="FechaInicio" id="FechaInicio" min="@DateTime.Now.ToString("dd-MMMM-yyyy HH:mm:ss")" />
+                                                <input asp-for="@notificacionAdmin.Participante.FechaInicio" required type="date" class="input-date" name="FechaInicio" id="FechaInicio" min="@fechaactual" />
                                                 <span asp-validation-for="@notificacionAdmin.Participante.FechaInicio" class="text-danger"></span>
                                             </div>
                                             <div class="form-group">
                                                 <label asp-for="@notificacionAdmin.Participante.FechaFinalizacion" class="control-label">Fecha Finalizacion de Inscripcion de Garantes</label>
-                                                <input asp-for="@notificacionAdmin.Participante.FechaFinalizacion" required type="date" class="input-date" name="FechaFinalizacion" id="FechaFinalizacion" min="@DateTime.Now.ToString("dd-MMMM-yyyy HH:mm:ss")" />
+                                                <input asp-for="@notificacionAdmin.Participante.FechaFinalizacion" required type="date" class="input-date" name="FechaFinalizacion" id="FechaFinalizacion" min="@fechaactual" />
                                                 <span asp-validation-for="@notificacionAdmin.Participante.FechaFinalizacion" class="text-danger"></span>
                                             </div>
                                             <div class="container-modal-btn">
@@ -113,7 +114,7 @@
                         }
                         else
                         {
-                            @if (notificacionAdmin.Transacciones.Estado != "PENDIENTE ADMIN" && notificacionAdmin.Transacciones.Estado == "RECHAZADO" || notificacionAdmin.Transacciones.Estado == "APROBADO" || notificacionAdmin.Transacciones.Estado != "PENDIENTE REFERENTE")
+                            @if (notificacionAdmin.Transacciones.Estado != "PENDIENTE ADMIN" &&  notificacionAdmin.Transacciones.Estado == "APROBADO" )
                             {
                                 <div class="modal-principal" id="modal-@notificacionAdmin.Notificaciones.Id">
                                     <div class="modal__container">
